text generation and audio transcription, very early prototype

--- a/util/src/nexutil/config.toml
+++ b/util/src/nexutil/config.toml
@@ -6,3 +6,12 @@
 
 [taskmanager]
     port = 4202
+
+[postgresql]
+    host = "localhost"
+    database_name = "nexus"
+    username = "nexus"
+    password = "nexus"
+
+[inference]
+    port = 4203
