added support for vecor in postgre tasks get encoded as embeddings and saved in the db

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ git+https://github.com/sanchit-gandhi/whisper-jax.git
 
 #others
 psycopg[binary, pool]
-celery
+pgvector
+celery[redis]
 pyrogram
 
